--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'daisyui/dist/full.css';
 
-/* Gobel font fira_code.css in folder public/font/ttf/ */
 @font-face {
   font-family: 'Gobel';
-  /* src: url('/path_to_your_font/Gobel.woff2') format('woff2'), */
-  /* url('/path_to_your_font/Gobel.woff') format('woff'); */
   src: url('/font/woff2/FiraCode-Light.woff2') format('woff2'),
   url('/font/woff/FiraCode-Light.woff') format('woff');
   font-weight: normal;
